# src/lib/api-doc.yaml
@@ -4182,6 +4182,8 @@ paths:
   /api/employee/archieve:
     get:
       summary: Get Archived Employees
+      tags:
+       - Employee
       description: Retrieves a paginated list of archived employees for the authenticated admin.
       security:
         - BearerAuth: []
@@ -4239,6 +4241,8 @@ paths:
   /api/employee/archieve/{id}:
      patch:
         summary: Archive or Unarchive an Employee
+        tags:
+          - Employee
         description: Toggles the archived status of an employee by their ID.
         parameters:
           - name: id
